@@ -768,14 +768,17 @@ end
 --tex TODO bit of a misnomer now that they can be loaded internally
 --IN/SIDE: InfModules.externalModules
 function this.LoadExternalModule(moduleName,isReload,skipPrint)
-  this.Log("LoadExternalModule "..tostring(moduleName).." isReload:"..tostring(isReload))
+  InfCore.Log("LoadExternalModule "..tostring(moduleName).." isReload:"..tostring(isReload))
   local prevModule=_G[moduleName]
-  if isReload then
-    if prevModule and prevModule.PreModuleReload then
+  if prevModule then
+    if not isReload then
+      InfCore.Log("Module "..moduleName.." already loaded and not isReload, so will not reload it",true)
+      return
+    elseif prevModule.PreModuleReload then
       InfCore.Log(moduleName..".PreModuleReload")
       InfCore.PCallDebug(prevModule.PreModuleReload)
     end
-  end
+  end--if prevModule
 
   local module=nil
   local scriptPath=InfCore.gamePath..InfCore.modSubPath.."/modules/"..moduleName..".lua"
@@ -814,15 +817,16 @@ function this.LoadExternalModule(moduleName,isReload,skipPrint)
   
   if not module then
     InfCore.Log("ERROR: !module for "..moduleName,true,true)
+    return
   end
 
-  if isReload and module then
+  if isReload then
     if InfMain then
       InfMain.PostModuleReloadMain(module,prevModule)
     end
     if module.PostModuleReload then
       InfCore.Log(moduleName..".PostModuleReload")
-      InfCore.PCallDebug(module.PostModuleReload,prevModule)
+      InfCore.PCallDebug(module.PostModuleReload,prevModule,isReload)
     end
   end
 
